client/src/App.css
/* MAIN CSS STYLING */
html {
    box-sizing: border-box;
}
body {
    background-image: url(img/background-static-FontysPRO.png);
    background-repeat: no-repeat;
    background-size: 100%;
}

.landing-container {
    background-repeat: no-repeat;
    display: flex;
    flex-direction: column;
    z-index: 0;
    width: 100%;
}

.chatbotWidget-wrapper {
    display: flex; 
}

.chatbotWidget {
    display: inline-block;
    /* top: 200px; */
    left: 69%;
    height: 800px;
    overflow-y: scroll;
    width: 450px;
    background-color: #ffffff;

    -webkit-box-shadow: 4px 4px 10px -5px rgba(0,0,0,0.75);
    -moz-box-shadow: 4px 4px 10px -5px rgba(0,0,0,0.75);
    box-shadow: 4px 4px 10px -5px rgba(0,0,0,0.75);

}


.chatbotWidget-header {
    background-color: #0076E0;
    color: #FFFFFF;
    width: 450px;
    position: fixed;
    z-index: 999;
    -webkit-box-shadow: 4px 4px 10px -5px rgba(0,0,0,0.75);
    -moz-box-shadow: 4px 4px 10px -5px rgba(0,0,0,0.75);
    box-shadow: 4px 4px 10px -5px rgba(0,0,0,0.75);
}


input[type=text] {
    height: 10%;
    width: 100%;
    background: #FFFFFF;
    box-shadow: 0px 4px 24px rgba(0, 0, 0, 0.08);
    /* border-radius: 14px; */
    border: none;
    color: #484848;
    padding-left: 5%;
    float: left;
    font-size: 16px;
    position: absolute;
    right:    0;
    bottom:   0;
    float: bottom;
    position: sticky;
    z-index: 999;
}

.arrow-input {
    background-image: url(https://chatbot-fhict.bramwicherink.nl/images/arrow.svg);
    position: absolute; 
    bottom: 20px;
}

.messageBoxContainer {
    width: 100%;
}

.chatbotWidget-header h2 {
    font-family: 'Arial', sans-serif;
    font-weight: 600;
    font-size: 40px;
    padding-top: 10px;  
    padding-left: 12px;
    margin: 0;
    height: 45px;
}

.chatbotWidget-header p {
    font-family: 'Arial', sans-serif;
    font-weight: 400;
    font-size: 15px;
    color: #FFFFFF;
    padding-left: 13px;
}

.chatbotAnswer {
    font-family: 'Arial', sans-serif;
    font-size: 21px;
    background-color: #0076E0;
    color: #FFFFFF;
    max-width: 70%;
    height: auto;
    clear: both;
    padding: 2% 2%;
    margin-top: 3%;
    margin-left: 3%;
    float: left;
}


#chatbotAnswer > p {
    padding: 20px;
}

.userAnswer {
font-family: 'Arial', sans-serif;
font-size: 21px;
background-color: #1CC600;
color: #FFFFFF;
max-width: 70%;
height: auto;
clear: both;
padding: 2% 2%;
margin-top: 3%;
margin-right: 3%;
float: right;
}

.userAnswer > p {
    padding: 0px;
}

#userAnswer p span {
    padding: 20px;
    margin: 60px;
}

.messageBox {
    height: 75%;
    margin-top: 25%;
}

.whitetext {
    color: #FFFFFF;
    font-weight: 300;
}

/* CARD STYLING */

.card-fontys {
    -webkit-box-shadow: none;
    -moz-box-shadow: none;
    box-shadow: none;
    padding-left: 12px;
    margin-bottom: 0;
    padding-bottom: 0;
    
}

.card-title {
    font-weight: 700;
}

.card-image img {
    filter: blur(2px);
  -webkit-filter: blur(2px);
}

/* TOGGLE CHATBOT BUTTON */
#toggleChatbot-open {
    display: block;
    background-color: #0076E0;
    border-radius: 50%;
    width: 75px;
    height: 75px;
    position: absolute;
    /* top: 875px; */
    left: 92%;
    top: calc(100% - 90px);
    z-index: 999;
    border-color: transparent;
}

#toggleChatbot-open img {
    display: block;
    margin-left: auto;
    margin-right: auto;
    width: 50%;
}

#toggleChatbot-close {
    display: block;
    background-color: #0076E0;
    border-radius: 50%;
    width: 75px;
    height: 75px;
    position: relative;
    /* top: 875px; */
    left: 92%;
    top: calc(100% - 90px);
    z-index: 999;
    border-color: transparent;
}

#toggleChatbot-close img {
    display: block;
    margin-left: auto;
    margin-right: auto;
    width: 50%;
}

/* TYPING INDICATOR */ 
.message-typing-indicator-container {
    margin-left: 13px;
    margin-bottom: 13px;
}
.typing-indicator {
    background-color: #F5F5F5;
    display: flex;
    margin-left: 13px;
    width: 80px;
    height: 30px;
    padding: 1rem 1.5rem 2rem;
    margin: 0 auto;
    position: relative;
    animation: 2s pulse infinite ease-out;
    
}


.typing-indicator::after {
     height: 10px;
     width: 10px;
     left: -17px;
     bottom: -17px;
 }


.typing-indicator span {
    height: 15px;
    width: 15px;
    float: left;
    margin: 0 1px;
    background-color: #9E9EA1;
    display: block;
    border-radius: 50%;
    opacity: 0.4;
}


.typing-indicator span:nth-child(1)
{
    animation: 1s blink infinite .3333s;
}

.typing-indicator span:nth-child(2)
{
    animation: 1s blink infinite .6666s;
}

.typing-indicator span:nth-child(3)
{
    animation: 1s blink infinite .9999s;
}

@keyframes blink
{
    50%
    {
        opacity: 1;
    }
}

@keyframes pulse
{
    50% {
        transform: scale(1.05);
    }
}
/* OVERRULE LIBRARY PROPERTIES */
.row {
    margin-bottom: 10px;
}

  @media screen and (max-width: 500px) {

    #toggleChatbot-open {
        top: calc(85%);
    }

    .chatbotWidget-wrapper {
        width: 100vw;
        right: 0 !important;
        bottom: 60% !important;
        top: 0 !important;
    }

    .chatbotWidget {
        width: 100%;
        height: auto;
    }

    .chatbotWidget-header {
        width: 100%;
        background-color: #0076E0;
        color: #FFFFFF;
        position: fixed;
        z-index: 999;
    }

    .messageBox {
        height: 40%;
    }
  }

